infra/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: interrealm-gateway
  namespace: interrealm
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "realm-a.local"
    - "realm-b.local"
    - "interrealm.local"
